use key values instead of codes for return key press

--- a/addLettersToWindow.html
+++ b/addLettersToWindow.html
@@ -9,9 +9,14 @@
  
 function showKeyCode(e) {
   if(keycode.getValueByEvent(e) == "return")
+  {
+  	$(".canvas").append("(return key)");
   	$(".canvas").append("<br/>");
+  }
   else
+  {
   	$(".canvas").append(keycode.getValueByEvent(e));
+  }
 }
  
 
